--- a/_site.yml
+++ b/_site.yml
@@ -4,17 +4,27 @@ description: |
   Data Analytics Journey
 output_dir: "_site"
 navbar:
-  right:
-    - text: "Home"
-      href: index.html
-    - text: "About"
-      href: about.html
   left:
+  
+    - text: "Take-home exercise"
+      menu:
+      - text: "Take-home Exercise 1"
+        href: "th_ex/th_ex1.html"
+      - text: "Take-home Exercise 2"
+        href: "th_ex/th_ex1.html"
+  
+  
     - text: "DataViz Makeover"
       menu:
       - text: "DataViz Makeover 1"
         href: "DataViz1"
       - text: "DataViz Makeover 2"
         href: "DataViz2"
-    - text: "Take-home exercise"
+      
+  right:
+    - text: "Home"
+      href: index.html
+    - text: "About"
+      href: about.html
+      
 output: distill::distill_article
